clusters/talos-robbinsdale/apps/ollama/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
