clusters/talos-robbinsdale/apps/ollama/tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: rajs-mac-mini.taila31de.ts.net
  name: tailscale-mac-mini
  namespace: home
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
