clusters/talos-robbinsdale/apps/ollama/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: ollama
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "open-webui.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: open-webui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
